# sdet-python-automation-core

./: .gitignore  README.md  config.yaml  output.xml  pyproject.toml  pytest.ini  requirements.txt  setup.py
sdet_python_automation_core.egg-info/: SOURCES.txt
src/automation_core/generators/: generate_random.py
src/automation_core/models/: login.py  produtos.py  usuarios.py
src/automation_core/models/dict/: dictionary_login.py  dictionary_usuarios.py
src/automation_core/utils/: __init__.py  utils.py
src/faker/: __init__.py  fakers.py
src/fakers/: __init__.py  fakers.py
src/generators/: __init__.py  generate_cnpj_cpf.py  generate_date.py  generate_random.py
src/models/: __init__.py  login.py  users.py
src/models/dict/: dictionary_login.py  dictionary_produtos.py  dictionary_users.py
src/sdet_core/bridge/: serverest_keywords.py
src/sdet_core/utils/: __init__.py
src/sdet_python_automation_core/: __init__.py
src/sdet_python_automation_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sdet_python_automation_core/core/: settings.yaml
src/sdet_python_automation_core/core/config/: loader.py
src/sdet_python_automation_core/core/context/: execution_context.py
src/sdet_python_automation_core/generators/: generate_cnpj_cpf.py  generate_date.py  generate_random.py
src/sdet_python_automation_core/libraries/: base_library.py
src/sdet_python_automation_core/libraries/serverest/: user_library.py
src/sdet_python_automation_core/models/: __init__.py  login.py  produtos.py  usuarios.py
src/sdet_python_automation_core/models/dict/: dictionary_produtos.py
src/sdet_python_automation_core/models/schemas/: __init__.py  login_schema.py  produto_schema.py  usuario_schema.py
src/sdet_python_automation_core/services/http/: http_client.py  http_response.py
src/sdet_python_automation_core/url/: __init__.py  url_api.py
src/sdet_python_automation_core/utils/: utils.py
src/url/: url_api.py
src/utils/: generate.py  utils.py
tests/: __init__.py  api_example.robot  conftest.py  test_generators.py  test_models.py
