[project]
name = "sdet-python-automation-core"
version = "0.1.0"
description = "Projeto Core para Automação com Robot"

dependencies = [
  "requests>=2.31",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
# Aqui permitimos que o Core tenha "superpoderes" para o Robot se solicitado
robot = [
  "robotframework>=6.0"
]
dev = [
  "pytest",
  "black",
  "ruff",
  "mypy"
]